Update build, install, and example.